Possibility for fallback adducts in COMET filters [ci-skip]